Add link services pistures in home page

--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
                     <a href="#page-top"></a>
                 </li>
                 <li>
+                    <a class="page-scroll" href="#">Servicios</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="#">Enfermedades más tratadas</a>
+                </li>
+                <li>
                     <a class="page-scroll" href="#about">Quienes somos</a>
                 </li>
                 <li>
@@ -73,6 +79,9 @@
 <header class="intro">
     <div class="intro-body">
         <div class="container">
+          <img src="img/logo.png" alt="">
+        </div>
+        <div class="container">
             <div class="col-md-7">
                 <h1 class="brand-heading">Medi<span class="color">Zen</span> Bolivia</h1>
                 <p class="intro-text">¡Más allá de la medicina Convencional!</p>
@@ -88,8 +97,39 @@
                 </ul>
             </div>
         </div>
+        <div class="container">
+          <a href="#">
+            <div id="link-ortomolecular" class="col-xs-6 col-md-3">
+              <div class="service-link">
+                Nutrición Ortomolecular
+              </div>
+            </div>
+          </a>
+          <a href="#">
+            <div id="link-homeopatia" class="col-xs-6 col-md-3">
+              <div class="service-link">
+                Homeopatía
+              </div>
+            </div>
+          </a>
+          <a href="#">
+            <div id="link-apiterapia" class="col-xs-6 col-md-3">
+              <div class="service-link">
+                Apiterapia
+              </div>
+            </div>
+          </a>
+          <a href="#">
+            <div id="link-terapianeural" class="col-xs-6 col-md-3">
+              <div class="service-link">
+                Terapía Neural
+              </div>
+            </div>
+          </a>
+        </div>
     </div>
 </header>
+
 
 <!-- Countdown -->
 <section id="countdown" class="container-fluid text-center">
