--- a/index.html
+++ b/index.html
@@ -45,7 +45,12 @@
                 <i class="fa fa-bars fa-2x"></i>
             </button>
         <a class="navbar-brand page-scroll" href="#page-top">
-              <img src="img/logo.png" alt="">
+            <div class="logo-white">
+              <img src="img/logo-white.png" alt="">
+            </div>
+            <div class="logo">
+              <img class="logo hide" src="img/logo.png" alt="">
+            </div>
             </a>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -55,14 +60,20 @@
           <li class="hidden">
             <a href="#page-top"></a>
           </li>
+          <li class="menu-extra hide">
+            <a class="page-scroll" href="#about">Servicios</a>
+          </li>
+          <li class="menu-extra hide">
+            <a class="page-scroll" href="#about">Tratamientos</a>
+          </li>
           <li>
-            <a class="page-scroll" href="#about">Quienes somos</a>
+            <a class="page-scroll" href="#about">Conócenos</a>
           </li>
           <li>
             <a class="page-scroll" href="#team">Nuestro equipo</a>
           </li>
           <li>
-            <a class="page-scroll" href="#contact">Contáctanos</a>
+            <a class="page-scroll" href="#contact">Contáctos</a>
           </li>
         </ul>
       </div>
@@ -72,59 +83,31 @@
   <!-- Intro Header -->
   <header class="intro">
     <div class="intro-body">
-      <div class="container">
-        <!-- <img src="img/logo.png" alt=""> -->
-      </div>
-      <div class="container">
-        <div class="col-md-7">
-          <h1 class="brand-heading">Medi<span class="color">Zen</span> Bolivia</h1>
-          <p class="intro-text color">¡Más allá de la medicina Convencional!</p>
+      <div class="intro-body-container">
+        <div class="container">
+          <iframe src="https://www.youtube.com/embed/sywV03Km8rY" width="100%" frameborder="0" allowfullscreen></iframe>
+          <!-- <object data="https://www.youtube.com/embed/sywV03Km8rY" width="560" height="315"></object> -->
         </div>
-        <div class="col-md-5">
-          <ul class="list-inline lead">
-            <li>
-              <a href="#services" class="btn btn-primary btn-lg page-scroll"><i class="fa fa-chevron-down"></i> Servicios</a>
-            </li>
-            <li>
-              <a href="#treatments" class="btn btn-default btn-lg page-scroll"><i class="fa fa-chevron-down"></i> Enfermedades más tratadas</a>
-            </li>
-          </ul>
+        <div class="container">
+          <div>
+            <ul class="list-inline buttons">
+              <li>
+                <a href="#services" class="btn btn-primary btn-lg page-scroll"><i class="fa fa-chevron-down"></i> Servicios</a>
+              </li>
+              <li>
+                <a href="#treatments" class="btn btn-default btn-lg page-scroll"><i class="fa fa-chevron-down"></i> Enfermedades más tratadas</a>
+              </li>
+            </ul>
+            <p class="intro-text">¡Más allá de la medicina Convencional!</p>
+          </div>
         </div>
-      </div>
-      <div class="container">
-        <a href="#ortomolecular">
-          <div id="link-ortomolecular" class="col-xs-6 col-md-3">
-            <div class="service-link">
-              Nutrición Ortomolecular
-            </div>
-          </div>
-        </a>
-        <a href="#homeopatia">
-          <div id="link-homeopatia" class="col-xs-6 col-md-3">
-            <div class="service-link">
-              Homeopatía
-            </div>
-          </div>
-        </a>
-        <a href="#apiterapia">
-          <div id="link-apiterapia" class="col-xs-6 col-md-3">
-            <div class="service-link">
-              Apiterapia
-            </div>
-          </div>
-        </a>
-        <a href="#terapianeural">
-          <div id="link-terapianeural" class="col-xs-6 col-md-3">
-            <div class="service-link">
-              Terapía Neural
-            </div>
-          </div>
-        </a>
       </div>
     </div>
   </header>
 
-  <section class="container-fluid text-center">
+  <section class="container-fluid text-center who-we-are">
+    <img class="item-left" src="img/background-left.png" alt="">
+    <img class="item-right" src="img/background-right.png" alt="">
     <div class="row">
       <div class="col-sm-6 card">
         <img src="img/icon-pildoras.png" class="img-responsive center-block" alt="">
@@ -209,6 +192,10 @@
     </div>
   </section>
 
+  <!-- Intermission Section -->
+  <section id="intermission" class="container-fluid">
+  </section>
+
   <!-- Treatments Section -->
   <section id="treatments" class="container-fluid">
     <div class="row">
@@ -274,78 +261,49 @@
 
   <!-- Progress Section -->
   <section id="progress" class="container-fluid text-center">
-    <h2 class="headerline">Nuestros asociados</h2><br>
-    <div class="associate-logo">
-      <a href="http://apizenbolivia.com/"> <img src="img/logo-apizen.png" alt=""> </a>
+    <img class="item-left" src="img/background-green-left.png" alt="">
+    <img class="item-right" src="img/background-green-right.png" alt="">
+    <div class="row">
+      <h2 class="headerline-color color">Nuestros asociados</h2><br>
+      <div class="associate-logo">
+        <a href="http://apiterapia.com.co/"> <img src="img/logo-colombia.png" alt=""> </a>
+      </div>
+      <div class="associate-logo">
+        <a href="http://apizenbolivia.com/"> <img src="img/logo-apizen.png" alt=""> </a>
+      </div>
+      <div class="associate-logo">
+        <a href="http://www.labhomeopatico.com/"> <img src="img/logo-aleman.png" alt=""> </a>
+      </div>
     </div>
-    <div class="associate-logo">
-      <a href="http://apiterapia.com.co/"> <img src="img/logo-colombia.png" alt=""> </a>
-    </div>
-    <div class="associate-logo">
-      <a href="http://www.apitherapy.org/"> <img src="img/logo-eeuu.png" alt=""> </a>
-    </div>
-    <div class="associate-logo">
-      <a href="http://www.labhomeopatico.com/"> <img src="img/logo-aleman.png" alt=""> </a>
-    </div>
-    <!-- <div class="col-lg-6 col-lg-offset-3"> -->
-    <!-- <a href="#"> <img src="img/logo-colombia.png" alt=""> </a> -->
-    <!-- </div> -->
   </section>
 
   <!-- Team Section -->
   <section id="team" class="container-fluid text-center">
-
+    <img class="item-left" src="img/background-green-left.png" alt="">
+    <img class="item-right" src="img/background-green-right.png" alt="">
     <div class="row">
-      <h2 class="headerline">Nuestros Profesionales</h2><br>
+      <h2 class="headerline-color color">Nuestros Profesionales</h2><br>
       <p class="content-text">Contamos con personal Profesional Medico calificado y con un alto estándar de práctica de ética médica. Nuestro Profesionales Médicos entra constantemente en capacitaciones para mantenerse al tanto de los avances en los diferentes servicios que
         Ofrecemos.
       </p>
       <br>
-      <div class="col-lg-3 col-md-6">
-        <h4 class="headerline">Dr. Roger E. Fernandez Bernal</h4>
-        <p><img src="img/avatar1.jpg" class="img-responsive center-block" alt=""></p>
-        <p>Director Médico Medizen - Cochabamba</p>
-        <!-- <ul class="list-inline lead">
-                <li><a href="/"><span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-twitter fa-stack-1x fa-inverse"></i></span></a></li>
-                <li><a href="/"><span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-behance fa-stack-1x fa-inverse"></i></span></a></li>
-                <li><a href="/"><span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-steam fa-stack-1x fa-inverse"></i></span></a></li>
-                <li><a href="mailto:"><span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-linkedin fa-stack-1x fa-inverse"></i></span></a></li>
-            </ul> -->
+      <div class="col-lg-4 col-md-6">
+        <span><img src="img/Dr-Susana-Carpio.png" class="img-responsive center-block" alt=""></span>
+        <h5>Dra. Susana K. Carpio Medina</h5>
+        <span>Médico Cirujano</span>
+        <span>Medizen - Cochabamba</span>
       </div>
-      <div class="col-lg-3 col-md-6">
-        <h4 class="headerline">Dra. Gueiza I. Medina Saavedra</h4>
-        <!-- <h4 class="headerline">Dra. Gueiza Ivonne Medina Saavedra</h4> -->
-        <p><img src="img/avatar2.jpg" class="img-responsive center-block" alt=""></p>
-        <p>Médico Cirujano - Medizen Santa Cruz</p>
-        <!-- <ul class="list-inline lead">
-                <li><a href="/"><span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-twitter fa-stack-1x fa-inverse"></i></span></a></li>
-                <li><a href="/"><span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-facebook fa-stack-1x fa-inverse"></i></span></a></li>
-                <li><a href="/"><span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-skype fa-stack-1x fa-inverse"></i></span></a></li>
-                <li><a href="mailto:"><span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-dribbble fa-stack-1x fa-inverse"></i></span></a></li>
-            </ul> -->
+      <div class="col-lg-4 col-md-6">
+        <span><img src="img/Dr-Roger-Fernandez.png" class="img-responsive center-block" alt=""></span>
+        <h5>Dr. Roger E. Fernandez Bernal</h5>
+        <span>Director Médico</span>
+        <span>Medizen - Cochabamba</span>
       </div>
-      <div class="col-lg-3 col-md-6">
-        <h4 class="headerline">Dra. Susana K. Carpio Medina</h4>
-        <!-- <h4 class="headerline">Dra. Susana Keyla Carpio Medina</h4> -->
-        <p><img src="img/avatar3.jpg" class="img-responsive center-block" alt=""></p>
-        <p>Médico Cirujano - Medizen Cochabamba</p>
-        <!-- <ul class="list-inline lead">
-                <li><a href="/"><span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-twitter fa-stack-1x fa-inverse"></i></span></a></li>
-                <li><a href="/"><span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-tumblr fa-stack-1x fa-inverse"></i></span></a></li>
-                <li><a href="/"><span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-pinterest fa-stack-1x fa-inverse"></i></span></a></li>
-                <li><a href="mailto:"><span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-envelope fa-stack-1x fa-inverse"></i></span></a></li>
-            </ul> -->
-      </div>
-      <div class="col-lg-3 col-md-6">
-        <h4 class="headerline">Dr. William Franco Mamani Cori</h4>
-        <p><img src="img/avatar4.jpg" class="img-responsive center-block" alt=""></p>
-        <p>Medico Cirujano - Medizen Sacaba.</p>
-        <!-- <ul class="list-inline lead">
-                <li><a href="/"><span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-twitter fa-stack-1x fa-inverse"></i></span></a></li>
-                <li><a href="/"><span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-behance fa-stack-1x fa-inverse"></i></span></a></li>
-                <li><a href="/"><span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-instagram fa-stack-1x fa-inverse"></i></span></a></li>
-                <li><a href="mailto:"><span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-envelope fa-stack-1x fa-inverse"></i></span></a></li>
-            </ul> -->
+      <div class="col-lg-4 col-md-6">
+        <span><img src="img/Dr-Magaly-Jacinto.png" class="img-responsive center-block" alt=""></span>
+        <h5>Dr. Magaly Jacinto Eugenio</h5>
+        <span>Director Médico</span>
+        <span>Medizen - Cochabamba</span>
       </div>
     </div>
   </section>
@@ -398,7 +356,7 @@
       "¡Más allá de la medicina Convencional!",
       "Profesionales con Ética Médica",
       "Descubra la forma de vivir sin dolor",
-      "Presencia Consolidada  en la Ciudad de Oruro",
+      "Presencia Consolidada en Oruro",
     ];
     $(window).on("backstretch.show", function(e, instance) {
       $(".intro-text").text(texts[instance.index]);
