Add new design for treatments

--- a/index.html
+++ b/index.html
@@ -198,11 +198,13 @@
 
   <!-- Treatments Section -->
   <section id="treatments" class="container-fluid">
+    <img class="item-left" src="img/background-orange-left.png" alt="">
+    <img class="item-right" src="img/background-orange-right.png" alt="">
     <div class="row">
-      <h2 class="headerline">ENFERMEDADES MAS TRATADAS</h2><br>
-      <div class="col-sm-6 split-padding4">
+      <h2 class="headerline-orange orange">ENFERMEDADES MAS TRATADAS</h2><br>
+      <div class="col-sm-6">
         <h4>Artrosis</h4>
-        <p><img src="img/artrosis.jpg" class="img-responsive center-block" alt=""></p>
+        <p><img src="img/artrosis.png" class="img-responsive center-block" alt=""></p>
         <p>Es una enfermedad Crónica que aqueja a gran parte de nuestra población. Esta enfermedad va destruyendo los cartílagos de las articulaciones y provocando deformaciones localizadas en las manos, las rodillas, la cadera o la columna vertebral.</p>
         <p>De acuerdo a la Organización Mundial de la Salud casi del 28% de la población mundial mayor de 60 años presenta artrosis y el 80% de ésta presenta limitaciones en sus movimientos. El aumento de esta enfermedad en la población, harán que la Artrosis
           sea la cuarta causa de discapacidad en el año 2020.</p>
@@ -217,9 +219,9 @@
         <p>Entre algunos síntomas que podemos mencionar.</p>
         <p>Nuestra recomendación siempre será visitar nuestro centro médico y recibir atención médica profesional.</p>
       </div>
-      <div class="col-sm-6 split-padding4">
+      <div class="col-sm-6">
         <h4>Artritis</h4>
-        <p><img src="img/artritis.jpg" class="img-responsive center-block" alt=""></p>
+        <p><img src="img/artritis.png" class="img-responsive center-block" alt=""></p>
         <p>La artritis se presenta en los pacientes con inflamación y dolor en zonas que incluyen los huesos, los músculos, las articulaciones y los tejidos que las sostienen.</p>
         <p>Como por ejemplo en una persona que corre mucho y utiliza las articulaciones de las rodillas y podría producir un desgaste crónico por el impacto crónico.</p>
         <p>Preste atención a los principales síntomas de la Artritis:</p>
@@ -264,7 +266,7 @@
     <img class="item-left" src="img/background-green-left.png" alt="">
     <img class="item-right" src="img/background-green-right.png" alt="">
     <div class="row">
-      <h2 class="headerline-color color">Nuestros asociados</h2><br>
+      <h2 class="headerline-green green">Nuestros asociados</h2><br>
       <div class="associate-logo">
         <a href="http://apiterapia.com.co/"> <img src="img/logo-colombia.png" alt=""> </a>
       </div>
@@ -282,7 +284,7 @@
     <img class="item-left" src="img/background-green-left.png" alt="">
     <img class="item-right" src="img/background-green-right.png" alt="">
     <div class="row">
-      <h2 class="headerline-color color">Nuestros Profesionales</h2><br>
+      <h2 class="headerline-green green">Nuestros Profesionales</h2><br>
       <p class="content-text">Contamos con personal Profesional Medico calificado y con un alto estándar de práctica de ética médica. Nuestro Profesionales Médicos entra constantemente en capacitaciones para mantenerse al tanto de los avances en los diferentes servicios que
         Ofrecemos.
       </p>
