--- a/index.html
+++ b/index.html
@@ -153,42 +153,76 @@
 
   <!-- Services Section -->
   <section id="services" class="container-fluid">
-    <h2 class="headerline">SERVICIOS</h2><br>
+    <img class="item-left" src="img/background-orange-left.png" alt="">
+    <img class="item-right" src="img/background-orange-right.png" alt="">
     <div class="row">
-      <div class="col-sm-6 split-padding4" id="ortomolecular">
-        <h4>Nutrición Ortomolecular</h4>
-        <p><img src="img/ortomolecular-2.jpg" class="img-responsive center-block" alt=""></p>
-        <p>Esta área de la medicina complementaria que está orientada a mantener la salud del paciente por medio de la suplementación nutricional.</p>
-        <p>Según esta disciplina el tratamiento de las enfermedades se encarga de corregir los desequilibrios o deficiencias basadas en la bioquímica individual y esto se puede lograr a base substancias naturales como: vitaminas, minerales, aminoácidos,
-          elementos traza y ácidos grasos.</p>
-        <p>Esta práctica es renombrada y claramente identificada por el progreso en la salud de los pacientes.</p>
+      <h2 class="headerline-orange orange">SERVICIOS</h2><br>
+      <div class="col-sm-6 split-padding6">
+        <a class="popup-with-move-anim" href="#apiterapia-popup">
+          <p>
+            <img src="img/icon-apiterapia.png" class="img-responsive center-block service-icon" alt="">
+            <span class="service-name">Apiterapia</span>
+          </p>
+        </a>
       </div>
-      <div class="col-sm-6 split-padding4" id="homeopatia">
-        <h4>Homeopatía</h4>
-        <p><img src="img/homeopatia-2.jpg" class="img-responsive center-block" alt=""></p>
-        <p>El mundo hoy en día presenta una creciente necesidad de tratamientos complementarios y de una visión diferente de la medicina convencional.</p>
-        <p>Esta disciplina médica nace de la mano de Samuel Hahnemann, médico alemán de principios del siglo XIX que se basa en la ley de los semejantes.</p>
-        <p>Esta ley de los semejantes dispone que una sustancia capaz de producir una determinada sintomatología (al experimentarla en individuos sanos) sea también capaz de curarla en los enfermos, administrándola en dosis mínimas.</p>
-        <p>Actualmente Medizen tiene el apoyo y fármacos administrados – enviados por Laboratorio Homeopático Alemán LHA.</p>
+      <div class="col-sm-6 split-padding6">
+        <a class="popup-with-move-anim" href="#homeopatia-popup">
+          <p>
+            <img src="img/icon-homeopatia.png" class="img-responsive center-block service-icon" alt="">
+            <span class="service-name">Homeopatía</span>
+          </p>
+        </a>
       </div>
     </div>
     <div class="row">
-      <div class="col-sm-6 split-padding4" id="apiterapia">
-        <h4>Apiterapia</h4>
-        <p><img src="img/apiterapia-2.jpg" class="img-responsive center-block" alt=""></p>
-        <p>El uso médico - terapéutico de la apiterapia se basa en el uso de los derivados de la colmena, aunque la apiterapia puede utilizarse en muchas enfermedades, principalmente ha demostrado grandiosos resultados en enfermedades reumáticas.</p>
-        <p>La apiterapia se encuentra dentro de la medicina complementaria que se utiliza para fines curativos, los productos apícolas o de la colmena como el veneno de abeja o apitoxina, miel, polen, pan de abeja, jalea real, propóleo, cera, larvas de zángano,
-          abejas enteras y recientemente el aire de la colmena.</p>
-        <p>Medizen actualmente posiciona a Bolivia como un País con uso de la Apiterapia de 2da Generación con resultados probados y aprobados por sociedades científicas.</p>
-        <p>Actualmente Medizen cuenta con el avaluó y apoyo de la Sociedad Científica de Colombia SCA.</p>
+      <div class="col-sm-6 split-padding6">
+        <a class="popup-with-move-anim" href="#terapia-neural-popup">
+          <p>
+            <img src="img/icon-terapia-neural.png" class="img-responsive center-block service-icon" alt="">
+            <span class="service-name">Terapia Neural</span>
+          </p>
+        </a>
       </div>
-      <div class="col-sm-6 split-padding4" id="terapianeural">
-        <h4>Terapia Neural</h4>
-        <p><img src="img/terapianeural-2.jpg" class="img-responsive center-block" alt=""></p>
-        <p>Esta terapia radica en la inyección en lugares determinados del cuerpo con el propósito principal de la restauración de los potenciales eléctricos en la membrana celular.</p>
-        <p>Este tipo de terapia es excelente para potenciar la energía vital del cuerpo. Estos resultados en el tratamiento de varios sistemas se pueden lograr sin efectos adversos.</p>
-        <p>Se puede impulsar la Re polarización de las células actuando en el sistema nervioso, aun aquellas que son resistentes a otros tratamientos médicos.</p>
+      <div class="col-sm-6 split-padding6">
+        <a class="popup-with-move-anim" href="#nutricion-ortomolecular-popup">
+          <p>
+            <img src="img/icon-nutricion-ortomolecular.png" class="img-responsive center-block service-icon" alt="">
+            <span class="service-name">Nutrición Ortomolecular</span>
+          </p>
+        </a>
       </div>
+    </div>
+    <div id="apiterapia-popup" class="zoom-anim-dialog mfp-hide">
+  	  <h2>Apiterapia</h2>
+      <p><img src="img/apiterapia-2.jpg" class="img-responsive center-block" alt=""></p>
+      <p>El uso médico - terapéutico de la apiterapia se basa en el uso de los derivados de la colmena, aunque la apiterapia puede utilizarse en muchas enfermedades, principalmente ha demostrado grandiosos resultados en enfermedades reumáticas.</p>
+      <p>La apiterapia se encuentra dentro de la medicina complementaria que se utiliza para fines curativos, los productos apícolas o de la colmena como el veneno de abeja o apitoxina, miel, polen, pan de abeja, jalea real, propóleo, cera, larvas de zángano,
+        abejas enteras y recientemente el aire de la colmena.</p>
+      <p>Medizen actualmente posiciona a Bolivia como un País con uso de la Apiterapia de 2da Generación con resultados probados y aprobados por sociedades científicas.</p>
+      <p>Actualmente Medizen cuenta con el avaluó y apoyo de la Sociedad Científica de Colombia SCA.</p>
+    </div>
+    <div id="homeopatia-popup" class="zoom-anim-dialog mfp-hide">
+      <h2>Homeopatía</h2>
+      <p><img src="img/homeopatia-2.jpg" class="img-responsive center-block" alt=""></p>
+      <p>El mundo hoy en día presenta una creciente necesidad de tratamientos complementarios y de una visión diferente de la medicina convencional.</p>
+      <p>Esta disciplina médica nace de la mano de Samuel Hahnemann, médico alemán de principios del siglo XIX que se basa en la ley de los semejantes.</p>
+      <p>Esta ley de los semejantes dispone que una sustancia capaz de producir una determinada sintomatología (al experimentarla en individuos sanos) sea también capaz de curarla en los enfermos, administrándola en dosis mínimas.</p>
+      <p>Actualmente Medizen tiene el apoyo y fármacos administrados – enviados por Laboratorio Homeopático Alemán LHA.</p>
+    </div>
+    <div id="terapia-neural-popup" class="zoom-anim-dialog mfp-hide">
+      <h2>Terapia Neural</h2>
+      <p><img src="img/terapianeural-2.jpg" class="img-responsive center-block" alt=""></p>
+      <p>Esta terapia radica en la inyección en lugares determinados del cuerpo con el propósito principal de la restauración de los potenciales eléctricos en la membrana celular.</p>
+      <p>Este tipo de terapia es excelente para potenciar la energía vital del cuerpo. Estos resultados en el tratamiento de varios sistemas se pueden lograr sin efectos adversos.</p>
+      <p>Se puede impulsar la Re polarización de las células actuando en el sistema nervioso, aun aquellas que son resistentes a otros tratamientos médicos.</p>
+    </div>
+    <div id="nutricion-ortomolecular-popup" class="zoom-anim-dialog mfp-hide">
+      <h2>Nutrición Ortomolecular</h2>
+      <p><img src="img/ortomolecular-2.jpg" class="img-responsive center-block" alt=""></p>
+      <p>Esta área de la medicina complementaria que está orientada a mantener la salud del paciente por medio de la suplementación nutricional.</p>
+      <p>Según esta disciplina el tratamiento de las enfermedades se encarga de corregir los desequilibrios o deficiencias basadas en la bioquímica individual y esto se puede lograr a base substancias naturales como: vitaminas, minerales, aminoácidos,
+        elementos traza y ácidos grasos.</p>
+        <p>Esta práctica es renombrada y claramente identificada por el progreso en la salud de los pacientes.</p>
     </div>
   </section>
 
@@ -234,7 +268,7 @@
         </p>
         <p>Nombrando uno de los elementos que se utiliza dentro de este tipo de terapias tenemos al Veneno de abeja ”Apitoxina” para el tratamiento natural y cura del desgaste de las articulaciones.</p>
       </div>
-      <div class="col-sm-12">
+      <!-- <div class="col-sm-12">
         <h4>Tenemos una lista Muy interesante de las enfermedades que puede ser tratada con la APITERAPIA</h4>
       </div>
       <div class="col-sm-4">
@@ -257,23 +291,23 @@
           <li>Esguinces y fracturas.</li>
           <li>Tumores: Benigno, Maligno (cáncer).</li>
         </ul>
-      </div>
+      </div> -->
     </div>
   </section>
 
   <!-- Progress Section -->
-  <section id="progress" class="container-fluid text-center">
+  <section id="associates" class="container-fluid text-center">
     <img class="item-left" src="img/background-green-left.png" alt="">
     <img class="item-right" src="img/background-green-right.png" alt="">
     <div class="row">
       <h2 class="headerline-green green">Nuestros asociados</h2><br>
-      <div class="associate-logo">
+      <div class="col-sm-4 associate-logo">
         <a href="http://apiterapia.com.co/"> <img src="img/logo-colombia.png" alt=""> </a>
       </div>
-      <div class="associate-logo">
+      <div class="col-sm-4 associate-logo">
         <a href="http://apizenbolivia.com/"> <img src="img/logo-apizen.png" alt=""> </a>
       </div>
-      <div class="associate-logo">
+      <div class="col-sm-4 associate-logo">
         <a href="http://www.labhomeopatico.com/"> <img src="img/logo-aleman.png" alt=""> </a>
       </div>
     </div>
@@ -290,22 +324,58 @@
       </p>
       <br>
       <div class="col-lg-4 col-md-6">
-        <span><img src="img/Dr-Susana-Carpio.png" class="img-responsive center-block" alt=""></span>
-        <h5>Dra. Susana K. Carpio Medina</h5>
-        <span>Médico Cirujano</span>
-        <span>Medizen - Cochabamba</span>
+        <div id="card1" class="card">
+          <div class="front">
+            <span><img src="img/Dr-Susana-Carpio.png" class="img-responsive center-block" alt=""></span>
+            <h5>Dra. Susana K. Carpio Medina</h5>
+            <span>Médico Cirujano</span>
+            <span>Medizen - Cochabamba</span>
+          </div>
+          <div class="back">
+            <h5>Dra. Susana Keyla Carpio Medina</h5>
+            Medico Regional “Santa Cruz” <br>
+            Medico Egresada de  la Facultad de Medicina Universidad Aquino Bolivia <br>
+            Cursos del ATLS y PHTLS aprobado. <br>
+            Diplomado en Ecografía abdominal y Ginecoobstetricia. <br>
+            Estudios de actualización con la Sociedad Colombiana de Apiterapia.
+          </div>
+        </div>
       </div>
       <div class="col-lg-4 col-md-6">
-        <span><img src="img/Dr-Roger-Fernandez.png" class="img-responsive center-block" alt=""></span>
-        <h5>Dr. Roger E. Fernandez Bernal</h5>
-        <span>Director Médico</span>
-        <span>Medizen - Cochabamba</span>
+        <div id="card2" class="card">
+          <div class="front">
+            <span><img src="img/Dr-Roger-Fernandez.png" class="img-responsive center-block" alt=""></span>
+            <h5>Dr. Roger E. Fernandez Bernal</h5>
+            <span>Director Médico</span>
+            <span>Medizen - Cochabamba</span>
+          </div>
+          <div class="back">
+            <h5>Roger Edwin Fernandez Bernal</h5>
+            Director Medico Nacional “Medizen” <br>
+            Especialista en Nutriologia Clínica con Práctica Ortomolecular <br>
+            Titulación Válida en Lic. En Medicina Madrid- España <br>
+            Diplomado en Farmacología <br>
+            Miembro Honorario Sociedad Colombiana de Apiterapia <br>
+            Medico Egresado de la Facultad de Medicina Universidad Privada del Valle <br>
+            Estudios de actualización con la Sociedad Colombiana de Apiterapia.
+          </div>
+        </div>
       </div>
       <div class="col-lg-4 col-md-6">
-        <span><img src="img/Dr-Magaly-Jacinto.png" class="img-responsive center-block" alt=""></span>
-        <h5>Dr. Magaly Jacinto Eugenio</h5>
-        <span>Director Médico</span>
-        <span>Medizen - Cochabamba</span>
+        <div id="card3" class="card">
+          <div class="front">
+            <span><img src="img/Dr-Magaly-Jacinto.png" class="img-responsive center-block" alt=""></span>
+            <h5>Dr. Magaly Jacinto Eugenio</h5>
+            <span>Director Médico</span>
+            <span>Medizen - Cochabamba</span>
+          </div>
+          <div class="back">
+            <h5>Dra. Magaly Jacinto Eugenio</h5>
+            Medico Regional “Oruro”<br>
+            Médico Cirujano egresada de la Facultad de Medicina UPAL <br>
+            Estudios de actualización con la Sociedad Colombiana de Apiterapia.
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -332,12 +402,16 @@
     </div>
   </section>
 
+  <!-- Magnific Popup core CSS file -->
+  <link rel="stylesheet" href="css/magnific-popup.css">
   <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-
+  <!-- Magnific Popup core JS file -->
+  <script src="js/jquery.magnific-popup.min.js"></script>
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-
+  <!-- https://nnattawat.github.io/flip/ -->
+  <script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js">
   <!-- Plugin JavaScript -->
   <script src="js/jquery.easing.min.js"></script>
   <script src="js/jquery.countdown.min.js"></script>
@@ -364,32 +438,30 @@
       $(".intro-text").text(texts[instance.index]);
     });
   </script>
+  <script type="text/javascript">
+    $(document).ready(function() {
+      $("#card1").flip();
+      $("#card2").flip();
+      $("#card3").flip();
+      $('.popup-with-move-anim').magnificPopup({
+    		type: 'inline',
+
+    		fixedContentPos: false,
+    		fixedBgPos: true,
+
+    		overflowY: 'auto',
+
+    		closeBtnInside: true,
+    		preloader: false,
+
+    		midClick: true,
+    		removalDelay: 300,
+    		mainClass: 'my-mfp-slide-bottom'
+      });
+    });
+  </script>
 
   <!-- Custom Theme JavaScript -->
   <script src="js/lovehub.js"></script>
-
-  <!--
-Google Analitics
-Demo Purpose Only
-Change UA-XXXXXXX-X to be your site's ID
- -->
-  <script>
-    (function(i, s, o, g, r, a, m) {
-      i['GoogleAnalyticsObject'] = r;
-      i[r] = i[r] || function() {
-        (i[r].q = i[r].q || []).push(arguments)
-      }, i[r].l = 1 * new Date();
-      a = s.createElement(o),
-        m = s.getElementsByTagName(o)[0];
-      a.async = 1;
-      a.src = g;
-      m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
-    ga('create', 'UA-1057679-2', 'auto');
-    ga('send', 'pageview');
-  </script>
-
 </body>
-
 </html>
