Add social links

--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
           <li>
             <a class="page-scroll" href="#contact">Contáctos</a>
           </li>
+          <li>
+            <a href="https://www.facebook.com/MedizenConsultorio/" class="social-link"><span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-facebook fa-stack-1x fa-inverse"></i></span></a>
+            <a href="https://www.youtube.com/channel/UCFM90BVa5tzOjcyNkZJhuSQ" class="social-link"><span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-youtube fa-stack-1x fa-inverse"></i></span></a>
+            <a href="https://www.instagram.com/medizen.bolivia/" class="social-link"><span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-instagram fa-stack-1x fa-inverse"></i></span></a>
+          </li>
         </ul>
       </div>
     </div>
@@ -386,20 +391,50 @@
     <div class="col-lg-6 col-lg-offset-3">
       <h2 class="headerline">Contáctanos</h2>
       <p>Escríbenos tus dudas y consultas, estamos dispuestos a ayudarte</p>
-      <h3><i class="fa fa-whatsapp"></i> (591) 79359492 </h3>
-      <h3><i class="fa fa-phone"></i> (591) 4-4063643 </h3>
-      <p><i class="fa fa-envelope"></i> info@medizencochabamba.com </p>
+      <!-- <h3><i class="fa fa-whatsapp"></i> (591) 79359492 </h3> -->
+      <!-- <p><i class="fa fa-envelope"></i> info@medizencochabamba.com </p> -->
       <ul class="list-inline lead">
-        <li><a href="/"><span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-twitter fa-stack-1x fa-inverse"></i></span></a></li>
-        <li><a href="/"><span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-facebook fa-stack-1x fa-inverse"></i></span></a></li>
-        <li><a href="/"><span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-google-plus fa-stack-1x fa-inverse"></i></span></a></li>
-        <li><a href=""><span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-envelope fa-stack-1x fa-inverse"></i></span></a></li>
+        <li><a href="https://www.facebook.com/MedizenConsultorio/"><span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-facebook fa-stack-1x fa-inverse"></i></span></a></li>
+        <li><a href="https://www.youtube.com/channel/UCFM90BVa5tzOjcyNkZJhuSQ"><span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-youtube fa-stack-1x fa-inverse"></i></span></a></li>
+        <li><a href="https://www.instagram.com/medizen.bolivia/"><span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-instagram fa-stack-1x fa-inverse"></i></span></a></li>
+        <!-- <li><a href=""><span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-envelope fa-stack-1x fa-inverse"></i></span></a></li> -->
       </ul>
-      <p><i class="fa fa-map-marker"></i> <strong>Cochabamba:</strong> Calle Mayor Rocha N°308 esq. Hamiraya lado Colegio La Salle</p>
-      <p><i class="fa fa-map-marker"></i> <strong>Cochabamba-Sacaba:</strong> Calle Ayacucho N°100 entre Bolivar y Monseñor Alcocer</p>
-      <p><i class="fa fa-map-marker"></i> <strong>Santa Cruz:</strong> Calle Cañada Strongest Esquina Platanillos Edif. SUTO local 5B Planta Baja</p>
-      <p class="text-muted">Copyright &copy; Medizen Bolivia 2017</p>
     </div>
+    <div class="row">
+      <div class="col-sm-4">
+        <h3>Santa Cruz</h3>
+        <p>
+          Calle Cañada Strongest <br>
+          Esquina Platanillos <br>
+          Edif. SUTO local 5B Planta Baja
+        </p>
+        <h4><i class="fa fa-phone"></i> (591) 3301353 </h4>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3807.4591782028197!2d-66.16404568534588!3d-17.389737988077215!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x93e3740a5c857f8f%3A0x5553b742d0816c64!2sMedizen+Cochabamba!5e0!3m2!1sen!2sbo!4v1497363290099" width="300" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <!-- <iframe src="contenido1.html" width="400" height="300" frameborder="0" style="border:0" name="opcion1" allowfullscreen></iframe> -->
+      </div>
+      <div class="col-sm-4">
+        <h3>Cochabamba</h3>
+        <p>
+          Calle Mayor Rocha N°308 <br>
+          Esq. Hamiraya <br>
+          Lado Colegio La Salle
+        </p>
+        <h4><i class="fa fa-phone"></i> (591) 4-4063643 </h4>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3807.4591782028197!2d-66.16404568534588!3d-17.389737988077215!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x93e3740a5c857f8f%3A0x5553b742d0816c64!2sMedizen+Cochabamba!5e0!3m2!1sen!2sbo!4v1497363290099" width="300" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
+      <div class="col-sm-4">
+        <h3>Oruro</h3>
+        <p>
+          Avenida España #640 <br>
+          Entre Soria Galvarro <br>
+          Y La Plata
+        </p>
+        <h4><i class="fa fa-phone"></i> (591) 71080502 </h4>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3807.4591782028197!2d-66.16404568534588!3d-17.389737988077215!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x93e3740a5c857f8f%3A0x5553b742d0816c64!2sMedizen+Cochabamba!5e0!3m2!1sen!2sbo!4v1497363290099" width="300" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
+    </div>
+    <br><br>
+    <p class="text-muted">Copyright &copy; Medizen Bolivia 2017</p>
   </section>
 
   <!-- Magnific Popup core CSS file -->
