Update team info

--- a/index.html
+++ b/index.html
@@ -333,8 +333,8 @@
           <div class="front">
             <span><img src="img/Dr-Susana-Carpio.png" class="img-responsive center-block" alt=""></span>
             <h5>Dra. Susana K. Carpio Medina</h5>
-            <span>Médico Cirujano</span>
-            <span>Medizen - Cochabamba</span>
+            <span>Médico Regional Santa Cruz</span>
+            <span></span>
           </div>
           <div class="back">
             <h5>Dra. Susana Keyla Carpio Medina</h5>
@@ -351,8 +351,8 @@
           <div class="front">
             <span><img src="img/Dr-Roger-Fernandez.png" class="img-responsive center-block" alt=""></span>
             <h5>Dr. Roger E. Fernandez Bernal</h5>
-            <span>Director Médico</span>
-            <span>Medizen - Cochabamba</span>
+            <span>Director Médico Nacional</span>
+            <span></span>
           </div>
           <div class="back">
             <h5>Roger Edwin Fernandez Bernal</h5>
@@ -371,8 +371,8 @@
           <div class="front">
             <span><img src="img/Dr-Magaly-Jacinto.png" class="img-responsive center-block" alt=""></span>
             <h5>Dr. Magaly Jacinto Eugenio</h5>
-            <span>Director Médico</span>
-            <span>Medizen - Cochabamba</span>
+            <span>Médico Regional Oruro</span>
+            <span></span>
           </div>
           <div class="back">
             <h5>Dra. Magaly Jacinto Eugenio</h5>
