Correct typo issues

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <div class="row">
       <div class="col-sm-6 card">
         <img src="img/icon-estetoscopio.png" class="img-responsive center-block" alt="">
-        <p class="sub-text">Nuestros tratamientos en el área reumática realmente están dando mucho de qué hablar en ambiente medico nacional. Contamos con una base de datos de testimonios y agradecimientos en el área en la que trabajamos.</p>
+        <p class="sub-text">Nuestros tratamientos en el área reumática realmente están dando mucho de qué hablar en ambiente médico nacional. Contamos con una base de datos de testimonios y agradecimientos en el área en la que trabajamos.</p>
       </div>
       <div class="col-sm-6 card">
         <img src="img/icon-enfermera.png" class="img-responsive center-block" alt="">
@@ -150,7 +150,7 @@
           Nuestro Centro se especializa en Medicina Complementaria, Apiterapia, homeopatía, Nutrición Ortomolecular, Terapia Neural, Apiterapia, Electroterapia en enfermedades crónicas.
         </p>
         <p>
-          Contamos con un plantel medico de profesionales dispuestos a ayudar a nuestros pacientes y mejorar su calidad de vida.
+          Contamos con un plantel médico de profesionales dispuestos a ayudar a nuestros pacientes y mejorar su calidad de vida.
         </p>
       </div>
     </div>
@@ -324,7 +324,7 @@
     <img class="item-right" src="img/background-green-right.png" alt="">
     <div class="row">
       <h2 class="headerline-green green">Nuestros Profesionales</h2><br>
-      <p class="content-text">Contamos con personal Profesional Medico calificado y con un alto estándar de práctica de ética médica. Nuestro Profesionales Médicos entra constantemente en capacitaciones para mantenerse al tanto de los avances en los diferentes servicios que
+      <p class="content-text">Contamos con personal Profesional Médico calificado y con un alto estándar de práctica de ética médica. Nuestro Profesionales Médicos entra constantemente en capacitaciones para mantenerse al tanto de los avances en los diferentes servicios que
         Ofrecemos.
       </p>
       <br>
@@ -338,8 +338,8 @@
           </div>
           <div class="back">
             <h5>Dra. Susana Keyla Carpio Medina</h5>
-            Medico Regional “Santa Cruz” <br>
-            Medico Egresada de  la Facultad de Medicina Universidad Aquino Bolivia <br>
+            Médico Regional “Santa Cruz” <br>
+            Médico Egresada de  la Facultad de Medicina Universidad Aquino Bolivia <br>
             Cursos del ATLS y PHTLS aprobado. <br>
             Diplomado en Ecografía abdominal y Ginecoobstetricia. <br>
             Estudios de actualización con la Sociedad Colombiana de Apiterapia.
@@ -356,12 +356,12 @@
           </div>
           <div class="back">
             <h5>Roger Edwin Fernandez Bernal</h5>
-            Director Medico Nacional “Medizen” <br>
+            Director Médico Nacional “Medizen” <br>
             Especialista en Nutriologia Clínica con Práctica Ortomolecular <br>
             Titulación Válida en Lic. En Medicina Madrid- España <br>
             Diplomado en Farmacología <br>
             Miembro Honorario Sociedad Colombiana de Apiterapia <br>
-            Medico Egresado de la Facultad de Medicina Universidad Privada del Valle <br>
+            Médico Egresado de la Facultad de Medicina Universidad Privada del Valle <br>
             Estudios de actualización con la Sociedad Colombiana de Apiterapia.
           </div>
         </div>
@@ -376,7 +376,7 @@
           </div>
           <div class="back">
             <h5>Dra. Magaly Jacinto Eugenio</h5>
-            Medico Regional “Oruro”<br>
+            Médico Regional “Oruro”<br>
             Médico Cirujano egresada de la Facultad de Medicina UPAL <br>
             Estudios de actualización con la Sociedad Colombiana de Apiterapia.
           </div>
