Add new medics on the team

--- a/index.html
+++ b/index.html
@@ -326,24 +326,6 @@
       </p>
       <br>
       <div class="col-lg-4 col-md-6">
-        <div id="card1" class="card">
-          <div class="front">
-            <span><img src="img/Dr-Susana-Carpio.png" class="img-responsive center-block" alt=""></span>
-            <h5>Dra. Susana K. Carpio Medina</h5>
-            <span>Médico Regional Santa Cruz</span>
-            <span></span>
-          </div>
-          <div class="back">
-            <h5>Dra. Susana Keyla Carpio Medina</h5>
-            Médico Regional “Santa Cruz” <br>
-            Médico Egresada de  la Facultad de Medicina Universidad Aquino Bolivia <br>
-            Cursos del ATLS y PHTLS aprobado. <br>
-            Diplomado en Ecografía abdominal y Ginecoobstetricia. <br>
-            Estudios de actualización con la Sociedad Colombiana de Apiterapia.
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-6">
         <div id="card2" class="card">
           <div class="front">
             <span><img src="img/Dr-Roger-Fernandez.png" class="img-responsive center-block" alt=""></span>
@@ -367,7 +349,7 @@
         <div id="card3" class="card">
           <div class="front">
             <span><img src="img/Dr-Magaly-Jacinto.png" class="img-responsive center-block" alt=""></span>
-            <h5>Dr. Magaly Jacinto Eugenio</h5>
+            <h5>Dra. Magaly Jacinto Eugenio</h5>
             <span>Médico Regional Oruro</span>
             <span></span>
           </div>
@@ -376,6 +358,39 @@
             Médico Regional “Oruro”<br>
             Médico Cirujano egresada de la Facultad de Medicina UPAL <br>
             Estudios de actualización con la Sociedad Colombiana de Apiterapia.
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6">
+        <div id="card1" class="card">
+          <div class="front">
+            <span><img src="img/Dr-Andrea-Guarachi.png" class="img-responsive center-block" alt=""></span>
+            <h5>Dra. Andrea C. Guarachi Pachecho</h5>
+            <span>Médico Regional La Paz</span>
+            <span></span>
+          </div>
+          <div class="back">
+            <h5>Dra. Andrea C. Guarachi Pacheco</h5>
+            Médico Regional "La Paz" <br>
+            Medico Egresada de la Facultad de Medicina de la Universidad Mayor de “San Andrés” <br>
+            Curso BLS Aprobado <br>
+            Especialidad en Salud Pública Mención Epidemiologia. 
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6">
+        <div id="card1" class="card">
+          <div class="front">
+            <span><img src="img/Dr-Andres-Mariaca.png" class="img-responsive center-block" alt=""></span>
+            <h5>Dr. Andres Willy Mariaca Mareño</h5>
+            <span>Médico Regional Santa Cruz</span>
+            <span></span>
+          </div>
+          <div class="back">
+            <h5>Dr. Andres Willy Mariaca Mareño. Guarachi Pacheco</h5>
+            Médico Regional "Santa Cruz" <br>
+            Médico Egresado de la Universidad de “Aquino Bolivia” <br>
+            Diplomado en Emergencias Médicas y Desastres por la Universidad Católica. <br>
           </div>
         </div>
       </div>
