Improve team section styles

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
         Ofrecemos.
       </p>
       <br>
-      <div class="col-lg-4 col-md-6">
+      <div class="col-lg-3 col-md-4 col-sm-6">
         <div id="card2" class="card">
           <div class="front">
             <span><img src="img/Dr-Roger-Fernandez.png" class="img-responsive center-block" alt=""></span>
@@ -345,7 +345,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-4 col-md-6">
+      <div class="col-lg-3 col-md-4 col-sm-6">
         <div id="card3" class="card">
           <div class="front">
             <span><img src="img/Dr-Magaly-Jacinto.png" class="img-responsive center-block" alt=""></span>
@@ -361,7 +361,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-4 col-md-6">
+      <div class="col-lg-3 col-md-4 col-sm-6">
         <div id="card1" class="card">
           <div class="front">
             <span><img src="img/Dr-Andrea-Guarachi.png" class="img-responsive center-block" alt=""></span>
@@ -378,7 +378,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-4 col-md-6">
+      <div class="col-lg-3 col-md-4 col-sm-6">
         <div id="card1" class="card">
           <div class="front">
             <span><img src="img/Dr-Andres-Mariaca.png" class="img-responsive center-block" alt=""></span>
