Add card animation to a medic info in team section

--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
             <h5>Dr. Andres Willy Mariaca Mareño. Guarachi Pacheco</h5>
             Médico Regional "Santa Cruz" <br>
             Médico Egresado de la Universidad de “Aquino Bolivia” <br>
-            Diplomado en Emergencias Médicas y Desastres por la Universidad Católica. <br>
+            Diplomado en Emergencias Médicas y Desastres por la Universidad Católica.
           </div>
         </div>
       </div>
@@ -490,6 +490,7 @@
       $("#card1").flip();
       $("#card2").flip();
       $("#card3").flip();
+      $("#card4").flip();
       $('.popup-with-move-anim').magnificPopup({
     		type: 'inline',
 
