--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
       </ul>
     </div>
     <div class="row">
-      <div class="col-sm-4">
+      <div class="col-md-4 col-sm-6">
         <h3>Santa Cruz</h3>
         <p>
           Calle Cañada Strongest <br>
@@ -424,7 +424,17 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3807.4591782028197!2d-66.16404568534588!3d-17.389737988077215!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x93e3740a5c857f8f%3A0x5553b742d0816c64!2sMedizen+Cochabamba!5e0!3m2!1sen!2sbo!4v1497363290099" width="300" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
         <!-- <iframe src="contenido1.html" width="400" height="300" frameborder="0" style="border:0" name="opcion1" allowfullscreen></iframe> -->
       </div>
-      <div class="col-sm-4">
+      <div class="col-md-4 col-sm-6">
+        <h3>La Paz</h3>
+        <p>
+          Av. 20 de Octubre <br>
+          Esq. Cap. Castrillo Edificio Los Cedros # 356 <br>
+          Planta baja oficina G5 (Zona San Pedro)
+        </p>
+        <h4><i class="fa fa-phone"></i> (591) 2312803 </h4>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3807.4591782028197!2d-66.16404568534588!3d-17.389737988077215!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x93e3740a5c857f8f%3A0x5553b742d0816c64!2sMedizen+Cochabamba!5e0!3m2!1sen!2sbo!4v1497363290099" width="300" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
+      <div class="col-md-4 col-sm-6">
         <h3>Cochabamba</h3>
         <p>
           Calle Mayor Rocha N°308 <br>
@@ -434,7 +444,7 @@
         <h4><i class="fa fa-phone"></i> (591) 4-4063643 </h4>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3807.4591782028197!2d-66.16404568534588!3d-17.389737988077215!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x93e3740a5c857f8f%3A0x5553b742d0816c64!2sMedizen+Cochabamba!5e0!3m2!1sen!2sbo!4v1497363290099" width="300" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
-      <div class="col-sm-4">
+      <div class="col-md-4 col-sm-6">
         <h3>Oruro</h3>
         <p>
           Avenida España #640 <br>
