Correct Addresses header offset

--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
   <!-- Contact Section -->
   <section id="contact" class="container-fluid text-center">
     <div class="overlay"></div>
-    <div class="col-lg-6 col-lg-offset-3">
+    <div class="row">
       <h2 class="headerline">Contáctanos</h2>
       <p>Escríbenos tus dudas y consultas, estamos dispuestos a ayudarte</p>
       <!-- <h3><i class="fa fa-whatsapp"></i> (591) 79359492 </h3> -->
